--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/react-fontawesome": "^1.6.8",
     "axios": "^1.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
